# TermGenius

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEMO_SCRIPT.md  DEVELOPMENT.md  LICENSE  OLLAMA_TEST_REPORT.md  PROJECT_INIT_REPORT.md  PROJECT_RECORD.md  README.md  RELEASE_NOTES.md  RELEASE_SUMMARY.md  SHELL_INTEGRATION.md  TermGenius 完善版项目方案.md  USAGE.md  WORK_SUMMARY_20260502.md  config.example.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: MODEL_DOWNLOAD.md  README.md
scripts/: download_background.bat  download_background.sh  download_model.py  install.ps1  install.sh  shell-integration.ps1  shell-integration.sh
src/: lib.rs  main.rs
src/commands/: generator.rs  mod.rs  prompt.rs
src/config/: manager.rs  mod.rs  schema.rs  tests.rs
src/error_capture/: analyzer.rs  executor.rs  mod.rs
src/history/: entry.rs  manager.rs  mod.rs
src/llm/: config.rs  engine.rs  error.rs  http_engine.rs  mock_engine.rs  mock_tests.rs  mod.rs  tests.rs
