[package]
name = "termgenius"
version = "0.1.0"
edition = "2021"
authors = ["liujycode <liujycode@gmail.com>"]
description = "本地离线 AI 终端助手 - 让终端操作更智能"
license = "MIT"
repository = "https://github.com/liujycode/TermGenius"
keywords = ["ai", "terminal", "cli", "llm", "local"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "termgenius"
path = "src/lib.rs"

[[bin]]
name = "termgenius"
path = "src/main.rs"

[dependencies]
# CLI 框架
clap = { version = "4.5", features = ["derive", "cargo"] }

# 终端 UI
ratatui = "0.26"
crossterm = "0.27"

# LLM 推理 (使用 HTTP API 方式，支持 Ollama/llama.cpp server)
# llama-cpp-2 = "0.1.77"  # 编译复杂，改用 HTTP API
reqwest = { version = "0.12", features = ["json", "blocking"] }

# 异步运行时
tokio = { version = "1.36", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 加密
aes-gcm = "0.10"
sha2 = "0.10"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 正则表达式
regex = "1.10"

# 配置管理
config = "0.14"
dirs = "5.0"

# 系统信息
num_cpus = "1.16"

[dev-dependencies]
# 测试
criterion = "0.5"

# [[bench]]
# name = "llm_benchmark"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
